Major refactor, also fix bot hug command (#205)